--- a/angular.json
+++ b/angular.json
@@ -21,11 +21,11 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-sharebuttons/themes/modern.scss"
             ],
             "scripts": []
           },
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "doomscroll:build:production"
+              "buildTarget": "doomscroll:build:production"
             },
             "development": {
-              "browserTarget": "doomscroll:build:development"
+              "buildTarget": "doomscroll:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "doomscroll:build"
+            "buildTarget": "doomscroll:build"
           }
         },
         "test": {
