--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "firebase": "^10.10.0",
     "ngx-infinite-scroll": "^17.0.0",
     "ngx-sharebuttons": "^13.0.0",
