--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ngx-sharebuttons": "^13.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.14.4"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@angular/cli": "~17.3.4",
     "@angular/compiler-cli": "^17.3.4",
     "@types/jasmine": "~4.3.0",
+    "@types/uuid": "^9.0.8",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
