--- a/angular.json
+++ b/angular.json
@@ -22,9 +22,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/assets",
-              "src/manifest.webmanifest",
-              "src/manifest.webmanifest",
-              "src/static/privacy.html"
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.css",
